--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>1.2.32</version>
+		</dependency>
 	</dependencies>
 
 	<build>
