--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,15 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>org.springdoc</groupId>
-		    <artifactId>springdoc-openapi-ui</artifactId>
-		    <version>1.2.32</version>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-ui</artifactId>
+    		<version>1.5.2</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-data-rest</artifactId>
+    		<version>1.5.2</version>
 		</dependency>
 	</dependencies>
 
