--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url = jdbc:mysql://localhost:3306/pricecomparison?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.password = root
+spring.datasource.password = 0xff8029
 #--------------HERE MAPS---------------------
 maps.baseurl = https://geocode.search.hereapi.com/v1/geocode
 maps.apikey = TflNtUxQaj1dEqOqRYegikDbv0H3CjFHyzvjNt3svxg
