Adicionado novos fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #--------------TOMCAT---------------------
-server.port=8090
+server.port=8085
 #server.tomcat.max-http-post-size=70MB
 ##--------------SERVER CONFIG---------------------
 #spring.servlet.multipart.enabled=true
@@ -12,8 +12,9 @@ server.port=8090
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url = jdbc:mysql://localhost:3306/pricecomparison?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username = root
+spring.datasource.url = jdbc:mysql://45.55.48.137:3306/pricecomparison?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username = root
+spring.datasource.username = palmsoft
 #spring.datasource.password = root
 spring.datasource.password = 0xff8029
 #--------------HERE MAPS---------------------
